contrib/helm/examples/kind/k8s/ingress.dev.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aleph-ingress-dev
  namespace: dev
spec:
  rules:
    - host: aleph.devel
      http:
        paths:
          - path: /
            backend:
              serviceName: aleph-ui
              servicePort: 80
          - path: /api
            backend:
              serviceName: aleph-api
              servicePort: 8000
